--- a/Angular_works/bankApp/src/app/home/home.component.html
+++ b/Angular_works/bankApp/src/app/home/home.component.html
@@ -27,7 +27,7 @@
                 Welcome <span class="fw-bold text-dark">{{user}}</span>
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item btn btn-dark" href="#">Logout</a></li>  
+                <li><a class="dropdown-item btn btn-dark" (click)='logout()' href="#">Logout</a></li>  
               </ul>
             </li>
             
